--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
     background-color: #f4f4f4;
     margin: 0;
     padding: 0;
-    background-image: url(/frontend/background/rupee.jpg);
+    background-image: url(/rupee.jpg);
     background-size: cover;
 }
 
